raceforthegalaxy.css
/* ... */
/**** tooltips ****/

.cardtooltip {
    max-width: 262px;
}

.militarytooltip {
	display: inline-block;
}

/** cards **/
.card_wrapper {
    position: relative;
    float: left;
    margin: 2px;
}
.card, .card_tooltip {
    position: relative;
}
.card {
    cursor: pointer;
}

.cardname, .cardname_tooltip {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-weight: bold;
    text-transform: uppercase;
}

.card_name_black .cardname, .card_name_black .cardname_tooltip {
    color: black;
}
.card_name_white .cardname, .card_name_white .cardname_tooltip {
    color: white;
    text-shadow: 1px 1px black;
}

.card_name_black .keyword,
.six_dev .keyword,
.six_dev_scoring_text .keyword {
    text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
}

.alien { color: #fdff4f }
.uplift { color: #6cc121 }
.imperium { color: #643b65 }
.rebel { color: #cc1915 }
.terraforming { color: #b2896d }
.xeno { color: #4a6ab0 }
.antixeno { color: #a4b4d4 }

.good {
    display:flex;
    align-items: center;
    justify-content: center;
}

/********** tiny **********/
.card_size_tiny .card,
.card_size_tiny .card_wrapper,
.card_size_tiny .cardcross {
    width: 112.43px;
    height: 160px;
    border-radius: 4px;
}
.card_size_tiny .card,
.card_size_tiny .card_wrapper {
    background-size: auto 1600px;
}
.card_size_tiny .cardcross {
    background-size: 112.43px;
}
.card_size_tiny .tableau_panel .cardcross {
    background-position: 0px -160px;
}

.card_size_tiny .cardname {
    left: 39px;
    top: 7px;
    width: 70px;
    height: 24px;
    font-size: 7px;
}
.card_size_tiny .good_place,
.card_size_tiny .good_wrap,
.card_size_tiny .good,
.card_size_tiny .goodsell {
    position: absolute;
    width: 40px;
    height: 64px;
    background-size: auto 64px;
    font-size: 16px;
}
.card_size_tiny .good2 { background-position: -40px 0px;  }
.card_size_tiny .good3 { background-position: -80px 0px;  }
.card_size_tiny .good4 { background-position: -120px 0px;  }
.card_size_tiny .selectedGood { border-radius: 11px; }

.card_size_tiny .scavengericon {
    width: 112.43px;
    height: 45px;
    background-size: 112.43px;
    background-position: -0px -321px;
    bottom: 4px;
}

.card_size_tiny #scavengercount {
    left: 38px;
    width: 38px;
    height: 38px;
    background-position: -41px -275px;
    font-size: 16px;
    background-size: 96px;
}

.card_size_tiny .damage {
    width: 110px;
    height: 110px;
    top: 25px;
    background-size: 110px;
}

.card_size_tiny .six_dev {
    right: 8px;
    top: 34px;
    font-size: 7px;
    transform-origin: top right;
    scale: 75%;
}

/********** Small **********/
.card_size_small .card,
.card_tooltip_size_small .card_tooltip,
.card_size_small .card_wrapper,
.card_size_small .cardcross {
    width: 133.5px;
    height: 190px;
    border-radius: 5px;
}
.card_size_small .card,
.card_tooltip_size_small .card_tooltip,
.card_size_small .card_wrapper {
    background-size: auto 1900px;
}
.card_size_small .cardcross {
    background-size: 133.5px;
}
.card_size_small .tableau_panel .cardcross {
    background-position: 0px -190px;
}

.card_size_small .cardname,
.card_tooltip_size_small .cardname_tooltip {
    left: 45px;
    top: 8px;
    width: 84px;
    height: 29px;
    font-size: 9px;
}
.card_size_small .good_place,
.card_size_small .good_wrap,
.card_size_small .good,
.card_size_small .goodsell {
    position: absolute;
    width: 48px;
    height: 77px;
    background-size: auto 77px;
    font-size: 19px;
}
.card_size_small .good2 { background-position: -48px 0px;  }
.card_size_small .good3 { background-position: -96px 0px;  }
.card_size_small .good4 { background-position: -144px 0px;  }
.card_size_small .selectedGood { border-radius: 13px; }

.card_size_small .scavengericon {
    width: 133.5px;
    height: 54px;
    background-size: 133.5px;
    background-position: -0px -382px;
    bottom: 5px;
}

.card_size_small #scavengercount {
    left: 43px;
    width: 47px;
    height: 47px;
    background-position: -49px -326px;
    font-size: 19px;
    background-size: 114px;
}

.card_size_small .damage {
    width: 132px;
    height: 132px;
    top: 29px;
    background-size: 132px;
}

.card_size_small .six_dev {
    right: 10px;
    top: 40px;
    font-size: 9px;
    transform-origin: top right;
    scale: 85%;
}

/********** Medium **********/
.card_size_medium .card,
.card_tooltip_size_medium .card_tooltip,
.card_size_medium .card_wrapper,
.card_size_medium .cardcross {
    width: 154.6px;
    height: 220px;
    border-radius: 6px;
}
.card_tooltip_size_medium .card_tooltip,
.card_size_medium .card_wrapper {
    background-size: auto 2200px;
}
.card_size_medium .cardcross {
    background-size: 154.6px;
}
.card_size_medium .tableau_panel .cardcross {
    background-position: 0px -220px;
}

.card_size_medium .cardname,
.card_tooltip_size_medium .cardname_tooltip {
    left: 54px;
    top: 9px;
    width: 92px;
    height: 33px;
    font-size: 10px;
}
.card_size_medium .good_place,
.card_size_medium .good_wrap,
.card_size_medium .good,
.card_size_medium .goodsell {
    position: absolute;
    width: 55px;
    height: 88px;
    background-size: auto 88px;
    font-size: 26px;
}
.card_size_medium .good2 { background-position: -55px 0px;  }
.card_size_medium .good3 { background-position: -110px 0px;  }
.card_size_medium .good4 { background-position: -165px 0px;  }
.card_size_medium .selectedGood { border-radius: 14px; }

.card_size_medium .scavengericon {
    width: 154.6px;
    height: 62px;
    background-size: 154.6px;
    background-position: -0px -443px;
    bottom: 6px;
}

.card_size_medium #scavengercount {
    left: 51px;
    width: 53px;
    height: 53px;
    background-position: -57px -378px;
    font-size: 26px;
    background-size: 132px;
}

.card_size_medium .damage {
    width: 153px;
    height: 153px;
    top: 33px;
    background-size: 153px;
}
/* ... */

